--- a/Core/EventSystem/EventSystem.csproj
+++ b/Core/EventSystem/EventSystem.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{993981B3-7FA8-4323-9F60-1A42AE0EB05B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{18E960EE-1794-4BAD-BF47-C54E17E4FF13}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ChatSample</RootNamespace>
-    <AssemblyName>ChatSample</AssemblyName>
+    <RootNamespace>EventSystem</RootNamespace>
+    <AssemblyName>EventSystem</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,16 +22,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -42,67 +36,37 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChatSettings.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="CodeGenerator.cs" />
+    <Compile Include="Events\NetworkLatencyEvent.cs" />
+    <Compile Include="Events\NetworkConnectedEvent.cs" />
+    <Compile Include="Events\NetworkNotConnectedEvent.cs" />
+    <Compile Include="Events\NetworkEvent.cs" />
+    <Compile Include="Events\NetworkReceiveAckEvent.cs" />
+    <Compile Include="Events\NetworkReceiveUnconnectedEvent.cs" />
+    <Compile Include="Events\NetworkReceiveEvent.cs" />
+    <Compile Include="Events\NetworkErrorEvent.cs" />
+    <Compile Include="Events\NetworkDisconnectedEvent.cs" />
+    <Compile Include="PubSub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ClientListener.cs" />
-    <Compile Include="Protocol.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Protocol.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ServerListener.cs" />
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
+    <Compile Include="PubSubEntry.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Core\Protocol\Protocol.csproj">
+    <ProjectReference Include="..\Protocol\Protocol.csproj">
       <Project>{ee853bf5-3db2-4a1b-8806-07b3b36edcce}</Project>
       <Name>Protocol</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Core\ReliableUdp\ReliableUdp.csproj">
+    <ProjectReference Include="..\ReliableUdp\ReliableUdp.csproj">
       <Project>{501d613e-8cbe-4dc3-888f-dbda285558be}</Project>
       <Name>ReliableUdp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Core\Utility\Utility.csproj">
+    <ProjectReference Include="..\Utility\Utility.csproj">
       <Project>{617ac602-e602-4b54-8f13-ee3a5c606666}</Project>
       <Name>Utility</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Protocol.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Protocol.designer.cs</LastGenOutput>
-    </Content>
-    <Content Include="Protocol\ChatProtocol.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
