--- a/Core/ReliableUdp/ReliableUdp.csproj
+++ b/Core/ReliableUdp/ReliableUdp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BitUtility\BitHelper.cs" />
     <Compile Include="NetworkStatistic\FlowManagement.cs" />
     <Compile Include="PacketHandler\ConnectionRequestHandler.cs" />
+    <Compile Include="PacketHandler\FragmentHandler.cs" />
     <Compile Include="PacketHandler\MergeHandler.cs" />
     <Compile Include="PacketHandler\MtuHandler.cs" />
     <Compile Include="PacketHandler\PingPongHandler.cs" />
@@ -69,7 +70,7 @@
     <Compile Include="UdpSettings.cs" />
     <Compile Include="Utility\FlowMode.cs" />
     <Compile Include="Const\HeaderSize.cs" />
-    <Compile Include="Utility\IncomingFragments.cs" />
+    <Compile Include="PacketHandler\IncomingFragments.cs" />
     <Compile Include="IUdpEventListener.cs" />
     <Compile Include="Logging\DebugLogger.cs" />
     <Compile Include="FactoryRegistrations.cs" />
