--- a/Core/ReliableUdp/ReliableUdp.csproj
+++ b/Core/ReliableUdp/ReliableUdp.csproj
@@ -15,6 +15,8 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors />
+    <OutputPath>C:\Users\kseti\Desktop\GameProjects\MMOFramework\UnityClient\Assets\Api\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
